--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,9 +9,8 @@
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/scripts/motion_detection_siemens.py",
-            "console": "integratedTerminal",
-            "args": ["--input_dir", "/Users/tclose/Data/moco-test",
-                     "--environment", "modules"]
+            "console": "internalConsole",
+            "args": ["--input_dir", "${workspaceFolder}/test/data/moco-test"]
         }
     ]
 }
