renamed T1Study and T2Study to T1w and T2w, plus some other minor renaming

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,4 +2,5 @@
 filterwarnings =
     default::DeprecationWarning:__main__
     ignore::DeprecationWarning
+    ignore::_pytest.warning_types.PytestCollectionWarning
     ignore::PendingDeprecationWarning
