--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ __pycache__
 /dist
 /docs/source/_build
 /docs/build
-/.pytest_cache/
+.pytest_cache/
 *.dcm
 /scripts/scans
 scripts/MotionCorrection_motion_par.txt
