--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -18,7 +18,7 @@
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/test/unittests/study/mri/test_t2star.py",
-            "console": "internalConsole",
+            "console": "integratedTerminal",
         }
     ]
 }
