--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@ scripts/MotionCorrection_motion_par.txt
 scripts/MotionCorrection_start_times.txt
 .cache
 /banana/interfaces/resources/matlab/new_qsm
+/.history
