--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "python.testing.pytestArgs": [
         "test"
     ],
-    "python.testing.pytestEnabled": false,
-    "python.pythonPath": "/usr/local/opt/python/bin/python3.7"
+    "python.testing.pytestEnabled": true,
+    "python.pythonPath": "/usr/local/opt/python/bin/python3.7",
+    "python.testing.unittestEnabled": false,
+    "python.testing.nosetestsEnabled": false
 }
