--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "python.testing.pytestEnabled": true,
     "python.pythonPath": "/usr/local/opt/python/bin/python3.7",
     "python.testing.unittestEnabled": false,
-    "python.testing.nosetestsEnabled": false
+    "python.testing.nosetestsEnabled": false,
+    "python.dataScience.debugJustMyCode": false
 }
