selected appropriate response function row from ss3t dhollander for shconv

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -54,7 +54,7 @@
             "name": "Python: Run residual test",
             "type": "python",
             "request": "launch",
-            "program": "${workspaceFolder}/scripts/residual_test.py",
+            "program": "${workspaceFolder}/test/scripts/residual_test.py",
             "console": "integratedTerminal"
         },
         {
